Add meta keywords

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="thebod Blog, feel free to post and comment
       about your fitness goals and achievements!" />
+      <meta name="keywords" content="fitness, fitness blog, health blog, wellbeing, fitness posts"
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
