--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="thebod Blog, feel free to post and comment
       about your fitness goals and achievements!" />
-  <meta name="keywords" content="fitness, fitness blog, health blog, wellbeing, fitness posts" <link
-    rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta name="keywords" content="fitness, fitness blog, health blog, wellbeing, fitness posts" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -20,7 +19,7 @@
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" crossorigin="use-credentials" />
 
-  
+
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
