--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon,svg" />
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon.svg" />
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon.svg" />
+  
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="thebod Blog, feel free to post and comment
