--- a/public/index.html
+++ b/public/index.html
@@ -1,61 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
-  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon,svg" />
-  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon.svg" />
-  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon.svg" />
+  <meta charset="utf-8" >
+  <meta name="viewport" content="width=device-width, initial-scale=1" >
+  <meta name="theme-color" content="#000000" >
+  <meta name="description" content="thebod Blog fitness and wellbeing image sharing platform" >
+  <meta name="keywords" content="fitness, fitness blog, health blog, wellbeing, fitness posts" >
+
+  <!-- Favicons -->
+  <link rel="icon" href="%PUBLIC_URL%/favicon.svg" >
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon.svg" >
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon.svg" >
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon.svg" >
+
   
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="thebod Blog, feel free to post and comment
-      about your fitness goals and achievements!" />
-  <meta name="keywords" content="fitness, fitness blog, health blog, wellbeing, fitness posts" />
+  <!-- Bootstrap -->
+  <link 
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+  integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" 
+  crossorigin="anonymous" />
+  
+  
+  <!-- Google Fonts -->
+  <link 
+  rel="preconnect" 
+  href="https://fonts.googleapis.com">
+  <link 
+  rel="preconnect" 
+  href="https://fonts.gstatic.com" 
+  crossorigin>
+  <link 
+  href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" 
+  rel="stylesheet">
+  
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-
-  <!-- Bootstrap -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" crossorigin="use-credentials" />
-
-
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
-
+  <link 
+  rel="manifest" 
+  href="%PUBLIC_URL%/manifest.json" 
+  crossorigin="use-credentials" />
   <!-- Font Awesome Icons -->
-  <script src="https://kit.fontawesome.com/ed532fafaf.js" crossorigin="anonymous"></script>
-  <!--
-    Notice the use of %PUBLIC_URL% in the tags above.
-    It will be replaced with the URL of the `public` folder during the build.
-    Only files inside the `public` folder can be referenced from the HTML.
-    
-    Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-    work correctly both with client-side routing and a non-root public URL.
-    Learn how to configure a non-root public URL by running `npm run build`.
-  -->
+  <script src="https://kit.fontawesome.com/ed532fafaf.js" 
+  crossorigin="anonymous">
+  </script>
+
   <title>thebod</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
 </body>
-
 </html>
