--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" >
-  <meta name="viewport" content="width=device-width, initial-scale=1" >
-  <meta name="theme-color" content="#000000" >
-  <meta name="description" content="thebod Blog fitness and wellbeing image sharing platform" >
-  <meta name="keywords" content="fitness, fitness blog, health blog, wellbeing, fitness posts" >
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#000000">
+  <meta name="description" content="thebod Blog fitness and wellbeing image sharing platform">
+  <meta name="keywords" content="fitness, fitness blog, health blog, wellbeing, fitness posts">
 
   <!-- Favicons -->
-  <link rel="icon" href="%PUBLIC_URL%/favicon.svg" >
-  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon.svg" >
-  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon.svg" >
-  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon.svg" >
+  <link rel="icon" href="%PUBLIC_URL%/favicon.svg">
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon.svg">
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon.svg">
 
   
   <!-- Bootstrap -->
@@ -19,7 +19,7 @@
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
   integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" 
-  crossorigin="anonymous" />
+  crossorigin="anonymous">
   
   
   <!-- Google Fonts -->
@@ -41,7 +41,7 @@
   <link 
   rel="manifest" 
   href="%PUBLIC_URL%/manifest.json" 
-  crossorigin="use-credentials" />
+  crossorigin="use-credentials">
   <!-- Font Awesome Icons -->
   <script src="https://kit.fontawesome.com/ed532fafaf.js" 
   crossorigin="anonymous">
